# gst-build-cross

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.pi  Dockerfile.rust  Dockerfile.ubuntu  README.md  README.pi.md  README.rust.md  docker-ubuntu.ps1  docker.ps1  docker.sh  meson_options.txt
scripts/: build-gst.sh  build-package  build-package.sh  build-rs-package.sh  build-rs.sh  build.sh  build2.sh  configure-gst.sh  configure-initial-gst.sh  entrypoint.sh  getlibpython.sh  install-env.py  install-package.sh  install-rs.sh  install.sh  purge_subprojects.sh
scripts/deb/: create_config.sh
scripts/deb/debian/: changelog  control  gstreamer.doc-base.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst  postinst.ex  prerm  prerm.ex  rules
scripts/deb/debian/bookworm/debian/: README  README.Debian  README.source  control  copyright  gstreamer.cron.d.ex  manpage.1.ex  postinst  postrm.ex  preinst.ex  rules
scripts/deb/ubuntu/: control
scripts/gst-plugins-rs/: Cargo.toml.deb
scripts/profile.d/: gstreamer-env.sh
tests/: README.md  whep.py  whep.sh
